--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,13 @@
-<h1>StaticPages#home</h1>
+<% content_for :js do %>
+  <%= javascript_import_module_tag "static_pages/home" %>
+<% end %>
+
+<h1 class="logo">MyLog</h1>
 <p>Find me in app/views/static_pages/home.html.erb</p>
+
+<div class="loginModal">
+  <h2>ログイン</h2>
+  <%= link_to "#", class: "closeBtn" do %>
+    <span class="close"></span>
+  <% end %>
+</div>
