--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,8 +1,8 @@
 <div class="sidebar">
-  <div class="sidebar__title"><%= link_to "MyLog", "#", class: "sidebar__logo" %></div>
+  <div class="sidebar__title"><%= link_to "MyLog", root_path, class: "sidebar__logo" %></div>
   <ul class="sidebar__menu">
-    <%= link_to "#", class: "sidebar__link" do %><li class="sidebar__item">スケジュール管理</li><% end %>
-    <%= link_to "#", class: "sidebar__link" do %><li class="sidebar__item">スキル管理</li><% end %>
-    <%= link_to "#", class: "sidebar__link" do %><li class="sidebar__item">マネー管理</li><% end %>
+    <%= link_to schedule_path, class: "sidebar__link" do %><li class="sidebar__item">スケジュール管理</li><% end %>
+    <%= link_to skill_path, class: "sidebar__link" do %><li class="sidebar__item">スキル管理</li><% end %>
+    <%= link_to money_path, class: "sidebar__link" do %><li class="sidebar__item">マネー管理</li><% end %>
   </ul>
 </div>
