make login and signup modal

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,5 +1,7 @@
 $cMain: #6C757D;
-$sideSpace: 5%;
+$leftSpace: 10%;
+$rightSpace: 15%;
 $heightSpace: 5px;
 $sidebarWidth: 180px;
-$sideMenuHeight: 50px;
+$sidebarWidth:  15%;
+$sideMenuHeight: 55px;
