--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="header">
   <ul class="header__menu">
-    <li  class="header__item"><%= link_to "ログイン", "#", class: "loginBtn" %></li>
+    <li  class="header__item"><%= link_to "ログイン", "#", class: "modalOpen loginBtn" %></li>
   </ul>
 </div>
