--- a/app/assets/stylesheets/static_pages/home.scss
+++ b/app/assets/stylesheets/static_pages/home.scss
@@ -11,7 +11,6 @@
   top: 10%;
   left: 50%;
   translate: -50% 0;
-  height: 60vh;
   width: 40vw;
   background-color: white;
   border: 1px $cMain solid;
@@ -22,25 +21,95 @@
   }
 }
 
-.closeBtn {
+.signupModal {
+  display: none;
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  translate: -50% 0;
+  width: 40vw;
+  background-color: white;
+  border: 1px $cMain solid;
+  text-align: center;
+  padding: 20px;
+
+  &.open {
+    display: block;
+  }
+}
+
+.forms {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: start;
+}
+
+.label {
+  width: 60%;
+  margin-top: 10px;
+}
+
+.form {
+  color: $cMain;
+  width: 60%;
+  padding: 5px 8px;
+  margin: 5px 0;
+}
+
+.btns {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.btn {
+  color: $cMain;
+  border: 1px solid $cMain;
+  border-radius: 10%;
+  width: auto;
+  padding: 5px 8px;
+
+  &__submit {
+    color: white;
+    background-color: $cMain;
+    cursor: pointer;
+  }
+
+  &__cancel {
+    color: $cMain;
+    margin-left:  10px;
+    cursor: pointer;
+  }
+
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
+.crossBtn {
   text-decoration: none;
   color: $cMain;
   position: fixed;
   top: 10px;
   right: 10px;
 
-  .close {
+  .cross {
     position: relative;
     display: block;
     height: 25px;
     width: 25px;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     &::before, &::after {
       content: "";
       position: absolute;
       top: 50%;
       left: 50%;
-      height: 25px;
+      height: 20px;
       width: 3px;
       background: $cMain;
       translate: -50% -50%;
@@ -49,7 +118,7 @@
     &::before {
       rotate: 45deg;
     }
-
+    
     &::after {
       rotate: -45deg;
     }
